--- a/index.html
+++ b/index.html
@@ -52,17 +52,22 @@
             </li>
           </ul>
         </address>
+        <button type="button">
+          <svg width="24" height="24">
+            <use xlink:href="./images/icons#"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
     <main>
-      <section class="order-page">
+      <section class="hidden order-page">
         <div class="container">
           <h1 class="order-title">Effective Solutions for Your Business</h1>
           <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
-      <section class="advantages">
+      <section class="hidden advantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-box">
@@ -117,7 +122,7 @@
           </ul>
         </div>
       </section>
-      <section class="employees-page">
+      <section class="hidden employees-page">
         <div class="container">
           <h2 class="employees-heading">Our Team</h2>
           <ul class="employees-box">
@@ -308,7 +313,7 @@
           </ul>
         </div>
       </section>
-      <section class="product">
+      <section class="hidden product">
         <div class="container">
           <h2 class="products-page">Our Portfolio</h2>
           <ul class="product-box">
@@ -430,7 +435,7 @@
         </div>
       </section>
     </main>
-    <footer class="for-autotest">
+    <footer class="hidden for-autotest">
       <div class="container footer-container">
         <div class="footer-description">
           <a href="./index.html" class="logo-link"
@@ -494,7 +499,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <div class="hidden modal-overlay">
       <div class="modal">
         <button type="button" class="close-modal">
           <svg class="close-modal-svg" width="8" height="8">
