--- a/index.html
+++ b/index.html
@@ -52,11 +52,71 @@
             </li>
           </ul>
         </address>
-        <button type="button">
-          <svg width="24" height="24">
-            <use xlink:href="./images/icons#"></use>
+        <button class="burger-btn" type="button">
+          <svg class="burget-icon" width="24" height="24">
+            <use xlink:href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
+      </div>
+
+      <div class="mobile-modal">
+        <div class="container mobile-modal-container">
+          <button class="btn-close-menu">
+            <svg class="" width="8" height="8">
+              <use class="" href="./images/icons.svg#icon-exit"></use>
+            </svg>
+          </button>
+          <nav>
+            <ul class="mobile-nav">
+              <li class="modal-nav-item">
+                <a href="index.html" class="mobile-nav-link first-mobile-link">Studio</a>
+              </li>
+              <li class="modal-nav-item">
+                <a href="index.html" class="mobile-nav-link">Portfolio</a>
+              </li>
+              <li class="modal-nav-item">
+                <a href="index.html" class="mobile-nav-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-contacts">
+            <a href="tel:+110001111111" class="mobile-tel">+11 (000) 111-11-11</a>
+            <a href="mailto:info@devstudio.com" class="mobile-email"
+              >info@devstudio.com</a
+            >
+          </address>
+        <div class="mobile-social">
+          <ul class="mobile-social-list">
+            <li class="mobile-social-item">
+              <a class="mobile-social-link" href="">
+                <svg class="mobile-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-item">
+              <a class="mobile-social-link" href="">
+                <svg class="mobile-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-item">
+              <a class="mobile-social-link" href="">
+                <svg class="mobile-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-item">
+              <a class="mobile-social-link" href="">
+                <svg class="mobile-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -67,6 +127,7 @@
           <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
+
       <section class="hidden advantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
@@ -122,6 +183,7 @@
           </ul>
         </div>
       </section>
+
       <section class="hidden employees-page">
         <div class="container">
           <h2 class="employees-heading">Our Team</h2>
@@ -313,6 +375,7 @@
           </ul>
         </div>
       </section>
+
       <section class="hidden product">
         <div class="container">
           <h2 class="products-page">Our Portfolio</h2>
@@ -435,11 +498,12 @@
         </div>
       </section>
     </main>
+
     <footer class="hidden for-autotest">
       <div class="container footer-container">
         <div class="footer-description">
-          <a href="./index.html" class="logo-link"
-            >Web<span class="logo-bottom">Studio</span></a
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="logo-footer-span">Studio</span></a
           >
           <p class="final-text">
             Increase the flow of customers and sales for your business with
@@ -499,6 +563,7 @@
         </div>
       </div>
     </footer>
+
     <div class="hidden modal-overlay">
       <div class="modal">
         <button type="button" class="close-modal">
