--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
     </header>
 
     <main>
-      <section class="hidden order-page">
+      <section class="order-page">
         <div class="container">
           <h1 class="order-title">Effective Solutions for Your Business</h1>
           <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
 
-      <section class="hidden advantages">
+      <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-box">
             <li class="advantages-l">
-              <div class="svg-box">
+              <div class="svg-box hidden">
                 <svg class="advantages-icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
@@ -145,7 +145,7 @@
               </p>
             </li>
             <li class="advantages-l">
-              <div class="svg-box">
+              <div class="svg-box hidden">
                 <svg class="advantages-icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
@@ -157,7 +157,7 @@
               </p>
             </li>
             <li class="advantages-l">
-              <div class="svg-box">
+              <div class="svg-box hidden">
                 <svg class="advantages-icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
@@ -169,7 +169,7 @@
               </p>
             </li>
             <li class="advantages-l">
-              <div class="svg-box">
+              <div class="svg-box hidden">
                 <svg class="advantages-icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
@@ -184,7 +184,7 @@
         </div>
       </section>
 
-      <section class="hidden employees-page">
+      <section class="employees-page">
         <div class="container">
           <h2 class="employees-heading">Our Team</h2>
           <ul class="employees-box">
