--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
           <nav>
             <ul class="mobile-nav">
               <li class="modal-nav-item">
-                <a href="index.html" class="mobile-nav-link first-mobile-link">Studio</a>
+                <a href="index.html" class="mobile-nav-link first-mobile-link"
+                  >Studio</a
+                >
               </li>
               <li class="modal-nav-item">
                 <a href="index.html" class="mobile-nav-link">Portfolio</a>
@@ -80,42 +82,45 @@
             </ul>
           </nav>
           <address class="mobile-contacts">
-            <a href="tel:+110001111111" class="mobile-tel">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="mobile-tel"
+              >+11 (000) 111-11-11</a
+            >
             <a href="mailto:info@devstudio.com" class="mobile-email"
               >info@devstudio.com</a
             >
           </address>
-        <div class="mobile-social">
-          <ul class="mobile-social-list">
-            <li class="mobile-social-item">
-              <a class="mobile-social-link" href="">
-                <svg class="mobile-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-social-item">
-              <a class="mobile-social-link" href="">
-                <svg class="mobile-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-social-item">
-              <a class="mobile-social-link" href="">
-                <svg class="mobile-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-social-item">
-              <a class="mobile-social-link" href="">
-                <svg class="mobile-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="mobile-social">
+            <ul class="mobile-social-list">
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -202,34 +207,30 @@
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -248,34 +249,30 @@
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="emp-soc-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -283,45 +280,41 @@
             <li class="employees-list">
               <img
                 src="./images/camila.jpg"
-                alt="camila_garcia"
+                alt="camilla_garcia"
                 width="264"
                 height="260"
               />
               <div class="employees-card">
-                <h3 class="employees-title">Camila Garcia</h3>
+                <h3 class="employees-title">Camilla Garcia</h3>
                 <p class="employees-description">Marketing</p>
                 <ul class="employees-social">
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -340,34 +333,30 @@
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="employees-social-list">
                     <a class="emp-soc-link" href="instagram.com"
                       ><svg class="employees-icons" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -376,17 +365,17 @@
         </div>
       </section>
 
-      <section class="hidden product">
+      <section class="product">
         <div class="container">
           <h2 class="products-page">Our Portfolio</h2>
           <ul class="product-box">
             <li class="product-list">
-              <div class="product-box">
+              <div class="product-card-box">
                 <img
                   src="./images/banking-app.jpg"
                   alt="mark_guerrero"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
                 <p class="product-hover-card">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -400,12 +389,12 @@
               </div>
             </li>
             <li class="product-list">
-              <div class="product-box">
+              <div class="product-card-box">
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="tom_ford"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
                 <p class="product-hover-card">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -419,12 +408,12 @@
               </div>
             </li>
             <li class="product-list">
-              <div class="product-box">
+              <div class="product-card-box">
                 <img
                   src="./images/meditation-app.jpg"
-                  alt="camila_garcia"
-                  width="360"
-                  height="300"
+                  alt="camilla_garcia"
+                  width="288"
+                  height="280"
                 />
                 <p class="product-hover-card">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -438,12 +427,12 @@
               </div>
             </li>
             <li class="product-list">
-              <div class="product-box">
+              <div class="product-card-box">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="daniel_wilson"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
                 <p class="product-hover-card">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -457,12 +446,12 @@
               </div>
             </li>
             <li class="product-list">
-              <div class="product-box">
+              <div class="product-card-box">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="daniel_wilson"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
                 <p class="product-hover-card">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -476,12 +465,12 @@
               </div>
             </li>
             <li class="product-list">
-              <div class="product-box">
+              <div class="product-card-box">
                 <img
                   src="./images/online-courses.jpg"
                   alt="daniel_wilson"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
                 <p class="product-hover-card">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -499,7 +488,7 @@
       </section>
     </main>
 
-    <footer class="hidden for-autotest">
+    <footer class="for-autotest">
       <div class="container footer-container">
         <div class="footer-description">
           <a href="./index.html" class="logo-footer"
@@ -548,7 +537,7 @@
           <form class="subscribe-inner-box">
             <label class="email-box">
               <input
-                name="subscribtion"
+                name="subscription"
                 class="email-area"
                 type="email"
                 placeholder="E-mail"
@@ -634,8 +623,9 @@
             <label for="user-privacy" class="terms-notice">
               <span class="fake-checkbox"
                 ><svg width="10" height="8">
-                  <use href="./images/icons.svg#icon-agree"></use></svg
-              ></span>
+                  <use href="./images/icons.svg#icon-agree"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
               <a class="policy">Privacy Policy</a>
             </label>
